k8s/be-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: svk-be
  namespace: svk
  labels:
    app: svk-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svk-be
  template:
    metadata:
      labels:
        app: svk-be
    spec:
      volumes:
        - name: upload
          nfs:
            server: 192.168.59.100
            path: /ppm/k8s-lab/svk/upload
      containers:
        - name: svk-be
          image: ppsdocker/svk-be:latest
          command:
            - node
            - 'dist/server.js'
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 128Mi
          volumeMounts:
            - name: upload
              mountPath: /app/upload
          livenessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
