k8s/fe-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: svk-fe
  namespace: svk
  labels:
    app: svk-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svk-fe
  template:
    metadata:
      labels:
        app: svk-fe
    spec:
      volumes:
        - name: svk-fe-nginx
          configMap:
            name: svk-fe-nginx
            defaultMode: 420
      containers:
        - name: svk-fe
          image: ppsdocker/svk-fe:latest
          command:
            - nginx
            - '-g'
            - 'daemon off;'
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 128Mi
          volumeMounts:
            - name: svk-fe-nginx
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
