k8s/fe-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: svk-fe
  namespace: svk
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: svk-fe
  type: ClusterIP
  sessionAffinity: None
