k8s/be-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: svk-be
  namespace: svk
  annotations:
    cert-manager.io/cluster-issuer: googleca-prod
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  tls:
    - hosts:
        - api.svk-ukf.sk
      secretName: api-svk-ukf-sk-secret-google
  rules:
    - host: api.svk-ukf.sk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: svk-be
                port:
                  number: 5000
